# helloSDL

./: README.md
helloSDL/: CMakeLists.txt
helloSDL/include/: CApp.h  CCandy.h  CEvent.h  Utils.h
helloSDL/src/: CApp.cpp  CCandy.cpp  CEvent.cpp  Utils.cpp
